# Donsagong

./: .env.production.example  .gitignore  CLAUDE.md  CODE_SIMILARITY_REPORT.md  FINAL_210_YEAR_VALIDATION_REPORT.md  FINAL_VALIDATION_REPORT.md  PROJECT_STRUCTURE.md  UNUSED_FILES_REPORT.md  accurate_daeun_calculator.py  accurate_saju_system_test.py  accurate_saju_system_test_report.md  accurate_saju_system_test_results.json  add_1903_complete_solar_terms.py  add_1908_solar_terms.py  add_1909_solar_terms.py  add_all_missing_solar_terms.py  analyze_daeun_theory.py  analyze_koyomi_html.py  automated_compatibility_analyzer.py  automated_compatibility_analyzer_jp.py  calculate_1908_male.py  calculate_1988_female.py  calculate_compatibility.py  collect_jeolip_data.py  compatibility_analyzer_complete.py  compatibility_analyzer_friendly.py  correct_matrix_analysis.py  create-goldensaju-test-user.sh  create-test-example-user.sh  create-test-user.sh  create_accurate_1986_database.py  debug_1903_calculation.py  debug_1986_get.html  debug_keisan_1986.html  debug_solar_terms.py  detailed_female_calculation.py  donsagong_compatibility_analysis.py  donsagong_complete_analysis.py  donsagong_correct_analysis.py  donsagong_final_analysis.py  (+67 more)
backend/: .gitignore  Dockerfile  README.md  alembic.ini  create_test_user.py  deploy-log.txt  env.yaml  pyproject.toml  requirements.txt  test_current_fortune.py
backend/alembic/: env.py
backend/app/: main.py
backend/tests/: conftest.py  test_auth.py  test_daeun_fortune.py  test_database.py  test_fortune_analyzer.py  test_integration_chains.py  (+10 more)
(+222 files in other folders)
